--- a/views/faq.ejs
+++ b/views/faq.ejs
@@ -1,89 +1,157 @@
 <div class="container">
   <h1 class="mb-4">Ofte stilte spørsmål (FAQ)</h1>
-  
-  <div class="accordion" id="faqAccordion">
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="false" aria-controls="faq1">
-          Hvordan lager jeg en quiz?
-        </button>
-      </h2>
-      <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          <p>For å lage en quiz, gå til "Lag quiz" i kontrollpanelet. Fyll ut tittel, beskrivelse, kategori og legg til spørsmål. Du kan velge mellom ulike spørsmålstyper som flervalg, sant/usant, og kort svar.</p>
+
+  <% if (locals.user && user.role === 'admin') { %>
+    <!-- Admin FAQ Section -->
+    <div class="alert alert-info mb-4">
+      <i class="bi bi-info-circle me-2"></i>
+      Dette er administratorversjonen av FAQ. Her finner du spesifikk informasjon for administratorer.
+    </div>
+
+    <div class="accordion" id="adminFaqAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#adminFaq1">
+            Hvordan administrerer jeg brukere?
+          </button>
+        </h2>
+        <div id="adminFaq1" class="accordion-collapse collapse" data-bs-parent="#adminFaqAccordion">
+          <div class="accordion-body">
+            <p>Som administrator kan du:</p>
+            <ul>
+              <li>Gå til Admin Dashboard > Brukere for å se alle brukere</li>
+              <li>Endre brukerroller mellom 'user' og 'admin'</li>
+              <li>Deaktivere eller slette brukerkontoer ved behov</li>
+              <li>Se brukerstatistikk og aktivitet</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#adminFaq2">
+            Hvordan håndterer jeg quizzer?
+          </button>
+        </h2>
+        <div id="adminFaq2" class="accordion-collapse collapse" data-bs-parent="#adminFaqAccordion">
+          <div class="accordion-body">
+            <p>Som administrator kan du:</p>
+            <ul>
+              <li>Redigere eller slette alle quizzer uavhengig av hvem som opprettet dem</li>
+              <li>Godkjenne eller avvise nye quizzer</li>
+              <li>Se statistikk over quiz-bruk og resultater</li>
+              <li>Administrere quiz-kategorier</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#adminFaq3">
+            Hva er mine administrative plikter?
+          </button>
+        </h2>
+        <div id="adminFaq3" class="accordion-collapse collapse" data-bs-parent="#adminFaqAccordion">
+          <div class="accordion-body">
+            <p>Som administrator bør du:</p>
+            <ul>
+              <li>Overvåke nye quiz-oppføringer for kvalitet og relevans</li>
+              <li>Håndtere brukerrapporter og klager</li>
+              <li>Sikre at innholdet er passende for skolemiljøet</li>
+              <li>Hjelpe brukere med tekniske problemer</li>
+              <li>Opprettholde et positivt læringsmiljø</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-    
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
-          Hvordan tar jeg en quiz?
-        </button>
-      </h2>
-      <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          <p>For å ta en quiz, gå til "Ta quiz" i kontrollpanelet. Velg en quiz fra listen og klikk på "Start quiz". Svar på spørsmålene og klikk på "Fullfør" når du er ferdig. Resultatene dine vil bli lagret og du kan se dem under "Mine resultater".</p>
+
+  <% } else { %>
+    <!-- Regular User FAQ Section -->
+    <div class="accordion" id="userFaqAccordion">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#userFaq1">
+            Hvordan lager jeg en quiz?
+          </button>
+        </h2>
+        <div id="userFaq1" class="accordion-collapse collapse" data-bs-parent="#userFaqAccordion">
+          <div class="accordion-body">
+            <p>For å lage en quiz:</p>
+            <ol>
+              <li>Logg inn på din konto</li>
+              <li>Klikk på 'Lag ny quiz' i menyen</li>
+              <li>Fyll ut quiz-informasjon (tittel, beskrivelse, kategori)</li>
+              <li>Legg til spørsmål med ulike formater (flervalg, sant/usant, kort svar)</li>
+              <li>Lagre quizzen når du er ferdig</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#userFaq2">
+            Hvordan spiller jeg multiplayer?
+          </button>
+        </h2>
+        <div id="userFaq2" class="accordion-collapse collapse" data-bs-parent="#userFaqAccordion">
+          <div class="accordion-body">
+            <p>For å spille multiplayer:</p>
+            <ol>
+              <li>Velg en quiz og klikk på 'Spill med andre'</li>
+              <li>Som vert: Del romkoden med vennene dine</li>
+              <li>Som deltaker: Skriv inn romkoden du har fått</li>
+              <li>Vent til alle er klare og verten starter spillet</li>
+              <li>Svar på spørsmålene og konkurrér om høyest poengsum!</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#userFaq3">
+            Hva slags quizzer kan jeg lage?
+          </button>
+        </h2>
+        <div id="userFaq3" class="accordion-collapse collapse" data-bs-parent="#userFaqAccordion">
+          <div class="accordion-body">
+            <p>Du kan lage quizzer relatert til IT-emner fra VG2:</p>
+            <ul>
+              <li>Programmering og algoritmer</li>
+              <li>Databasesystemer og SQL</li>
+              <li>Operativsystemer og nettverk</li>
+              <li>Webutvikling og design</li>
+              <li>IT-sikkerhet</li>
+            </ul>
+            <p>Quizzene bør være relevante for pensum og ha god kvalitet.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#userFaq4">
+            Hvordan får jeg achievements?
+          </button>
+        </h2>
+        <div id="userFaq4" class="accordion-collapse collapse" data-bs-parent="#userFaqAccordion">
+          <div class="accordion-body">
+            <p>Du kan låse opp achievements ved å:</p>
+            <ul>
+              <li>Lage din første quiz</li>
+              <li>Oppnå 100% score på quizzer</li>
+              <li>Vinne multiplayer-spill</li>
+              <li>Lage populære quizzer</li>
+              <li>Være aktiv på plattformen</li>
+            </ul>
+            <p>Sjekk din profilside for å se alle tilgjengelige achievements!</p>
+          </div>
         </div>
       </div>
     </div>
-    
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3" aria-expanded="false" aria-controls="faq3">
-          Hva slags quizzer kan jeg lage?
-        </button>
-      </h2>
-      <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          <p>Du kan lage quizzer som er relatert til IT-emner, spesielt fra de tre programfagene i Vg2 IT:</p>
-          <ul>
-            <li>Programmering</li>
-            <li>Databasesystemer</li>
-            <li>Operativsystemer og nettverk</li>
-          </ul>
-          <p>Vi oppfordrer til kreativitet og variasjon i spørsmålene. Du kan lage quizzer med ulik vanskelighetsgrad og ulike formater.</p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
-          Kan jeg redigere quizzer jeg har laget?
-        </button>
-      </h2>
-      <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          <p>Ja, du kan redigere quizzer du har laget ved å gå til "Mine quizzer" i kontrollpanelet. Du kan endre tittel, beskrivelse, kategori og spørsmål. Du kan også slette quizzer du har laget.</p>
-          <p>Merk at hvis noen allerede har tatt quizzen din, vil redigeringer ikke påvirke tidligere resultater.</p>
-        </div>
-      </div>
-    </div>
-    
-    <div class="accordion-item">
-      <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5" aria-expanded="false" aria-controls="faq5">
-          Hva er forskjellen mellom en bruker og en administrator?
-        </button>
-      </h2>
-      <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-        <div class="accordion-body">
-          <p>En vanlig bruker kan:</p>
-          <ul>
-            <li>Ta quizzer</li>
-            <li>Lage og redigere egne quizzer</li>
-            <li>Se sine resultater</li>
-          </ul>
-          <p>En administrator har i tillegg følgende muligheter:</p>
-          <ul>
-            <li>Administrere alle brukere (inkludert sletting)</li>
-            <li>Slette quizzer laget av andre</li>
-            <li>Håndtere rapporterte quizzer</li>
-            <li>Tilgang til statistikk og analyser</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
+  <% } %>
 </div>
